fix for h3 h2 on mobile

--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -16,6 +16,9 @@ html
   margin: 0
   padding: 0
 
+h3, h2
+  font-weight: normal
+
 #content
   background: #231f20
   width: 100%
